# Conary

./: .env.example  .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_PLAN.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE-APACHE  LICENSE-MIT  PHASE3_ADVERSARIAL_FOLLOWUPS.md  PROGRESS.md  README.md  REASONIX.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  build.rs  conaryos.toml  hermetic-test-1.0.0-1.ccs
apps/conary/: Cargo.toml  build.rs
apps/conary-test/: Cargo.toml  README.md  build.rs
apps/conary-test/src/: bootstrap.rs  build_info.rs  cli.rs  handlers.rs  lib.rs  paths.rs  suite_inventory.rs
apps/conary/src/: app.rs  command_risk.rs  dispatch.rs  lib.rs  live_host_safety.rs  main.rs
apps/conary/tests/: bootstrap_workflow.rs  bundle_replay.rs  cli_daily_ux.rs  component.rs  conversion_integration.rs  database.rs  enhancement_integration.rs  foreign_replay.rs  live_host_mutation_readiness.rs  live_host_mutation_safety.rs  model_apply.rs  native_pm_daily_driver.rs  native_pm_live_root.rs  packaging_m1b.rs  packaging_m2a.rs  packaging_m3a.rs  packaging_m3b.rs  packaging_m3c.rs  packaging_m3d.rs  packaging_m4a.rs  packaging_m4b.rs  packaging_m4c.rs  packaging_m4d.rs  query.rs  query_scripts.rs  static_repo_m1a.rs  workflow.rs
apps/conaryd/: Cargo.toml
apps/conaryd/src/: lib.rs
apps/remi/: Cargo.toml
apps/remi/src/: lib.rs  trust.rs
apps/remi/tests/: cli_help.rs
conary-core/: Cargo.toml
conary-core/benches/: erofs_build.rs
conary-core/examples/: sign_hash.rs
conary-core/src/: error.rs  hash.rs  json.rs  label.rs  lib.rs  self_update.rs  util.rs
conary-core/src/automation/: action.rs  check.rs  mod.rs  prompt.rs  scheduler.rs
conary-core/src/bootstrap/: adopt_seed.rs  base.rs  build_helpers.rs  build_runner.rs  chroot_env.rs  conary_stage.rs  config.rs  cross_tools.rs  final_system.rs  image.rs  mod.rs  repart.rs  stage0.rs  stage1.rs  stage2.rs  stages.rs  system_config.rs  temp_tools.rs  tier2.rs  toolchain.rs
conary-core/src/canonical/: appstream.rs  client.rs  discovery.rs  mod.rs  repology.rs  rules.rs  sync.rs
conary-core/src/capability/: declaration.rs  mod.rs  policy.rs  resolver.rs
conary-core/src/ccs/: archive_reader.rs  binary_manifest.rs  builder.rs  chunking.rs  inspector.rs  lockfile.rs  manifest.rs  mod.rs  package.rs  policy.rs  signing.rs  verify.rs
conary-core/src/components/: classifier.rs  filters.rs  mod.rs
conary-core/src/compression/: mod.rs
conary-core/src/container/: mod.rs
conary-core/src/db/: migrations.rs  mod.rs  paths.rs  schema.rs
conary-core/src/delta/: applier.rs  generator.rs  metrics.rs
conary-core/src/dependencies/: classes.rs  detection.rs
conary-core/src/derivation/: build_order.rs  capture.rs  compose.rs  convergence.rs  environment.rs  executor.rs  graph.rs  id.rs  index.rs  install.rs  manifest.rs  mod.rs  output.rs  pipeline.rs  profile.rs  recipe_hash.rs  seed.rs  seed_diff.rs  stages.rs  substituter.rs
conary-core/src/derived/: builder.rs  mod.rs
conary-core/src/filesystem/: cas.rs  deployer.rs  fsverity.rs  mod.rs  path.rs
conary-core/src/generation/: builder.rs  composefs.rs  composefs_rs_eval.rs  delta.rs  etc_merge.rs  gc.rs  metadata.rs  mod.rs  mount.rs
conary-core/src/mcp/: mod.rs
conary-core/src/model/: diff.rs  lockfile.rs  mod.rs  parser.rs  remote.rs  replatform.rs  signing.rs  state.rs
conary-core/src/provenance/: build.rs  content.rs  dna.rs  mod.rs  signature.rs  source.rs
conary-core/src/recipe/: audit.rs  cache.rs  format.rs  graph.rs  mod.rs  parser.rs  pkgbuild.rs
conary-core/src/repository/: chunk_fetcher.rs  client.rs  dependencies.rs  dependency_model.rs  download.rs  error_helpers.rs  gpg.rs  management.rs  metalink.rs  mirror_health.rs  mirror_selector.rs  mod.rs  registry.rs  remi.rs  resolution.rs  resolution_policy.rs  retry.rs  selector.rs  substituter.rs  sync.rs  versioning.rs
conary-core/src/resolver/: canonical.rs  component_resolver.rs  conflict.rs  engine.rs  graph.rs  identity.rs  mod.rs  plan.rs  provider.rs  provides_index.rs  sat.rs
conary-core/src/scriptlet/: mod.rs
conary-core/src/transaction/: journal.rs  mod.rs  planner.rs  recovery.rs
conary-core/src/trigger/: mod.rs
conary-core/src/trust/: ceremony.rs  client.rs  generate.rs  keys.rs  metadata.rs  mod.rs  verify.rs
conary-core/src/version/: mod.rs
conary-core/tests/: canonical.rs  derivation_e2e.rs
conary-erofs/: Cargo.toml
conary-erofs/src/: builder.rs  chunk.rs  compress.rs  dirent.rs  error.rs  inode.rs  lib.rs  superblock.rs  tail_pack.rs  verify.rs  xattr.rs
conary-server/: Cargo.toml
conary-server/src/: lib.rs
conary-server/src/daemon/: auth.rs  client.rs  enhance.rs  jobs.rs  lock.rs  mod.rs  routes.rs  socket.rs  systemd.rs
conary-server/src/federation/: circuit.rs  coalesce.rs  config.rs  manifest.rs  mdns.rs  mod.rs  peer.rs  router.rs
conary-server/src/server/: admin_service.rs  analytics.rs  artifact_paths.rs  audit.rs  auth.rs  bloom.rs  cache.rs  canonical_fetch.rs  canonical_job.rs  chunk_gc.rs  config.rs  conversion.rs  delta_manifests.rs  federated_index.rs  forgejo.rs  index_gen.rs  jobs.rs  lite.rs  mcp.rs  metrics.rs  mod.rs  negative_cache.rs  popularity.rs  prewarm.rs  r2.rs  rate_limit.rs  routes.rs  search.rs  security.rs  test_db.rs
conary-test/: Cargo.toml  README.md
conary-test/src/: cli.rs  error.rs  error_taxonomy.rs  lib.rs
conary-test/src/config/: distro.rs  manifest.rs  mod.rs
conary-test/src/container/: backend.rs  image.rs  lifecycle.rs  mock.rs  mod.rs
conary-test/src/engine/: assertions.rs  container_coordinator.rs  container_setup.rs  executor.rs  mock_server.rs  mod.rs  qemu.rs  runner.rs  suite.rs  variables.rs
conary-test/src/report/: json.rs  mod.rs  stream.rs
conary-test/src/server/: auth.rs  handlers.rs  mcp.rs  mod.rs  remi_client.rs  routes.rs  service.rs  state.rs  wal.rs
crates/conary-agent-contract/: Cargo.toml
crates/conary-agent-contract/src/: catalog.rs  lib.rs  resource.rs  result.rs
crates/conary-bootstrap/: Cargo.toml
crates/conary-mcp/: Cargo.toml
(+2319 files in other folders)
