[workspace]
members = [".", "conary-core", "conary-erofs", "conary-server"]
resolver = "3"

[package]
name = "conary"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["Conary Contributors"]
description = "Modern package manager with atomic operations, rollback, and delta updates"
repository = "https://github.com/ConaryLabs/Conary"
license = "MIT OR Apache-2.0"
keywords = ["package-manager", "rpm", "deb", "system"]
categories = ["command-line-utilities"]

[features]
default = []
server = ["dep:axum", "dep:tokio-util", "dep:tower-http", "dep:tower", "dep:filetime", "dep:async-trait", "dep:futures", "dep:dashmap", "dep:parking_lot", "dep:mdns-sd", "dep:flume", "dep:rust-s3", "dep:tantivy", "conary-core/server"]
daemon = ["server", "dep:sd-notify", "dep:axum-extra", "dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:tokio-stream"]
polkit = ["dep:zbus"]
# Experimental features not ready for production use (AI commands, etc.)
experimental = []

[dependencies]
# Core library
conary-core = { path = "conary-core" }

# EROFS image builder for composefs
conary-erofs = { path = "conary-erofs" }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"

# Logging (needed directly by main.rs and commands/)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

# Direct imports in commands/
thiserror = "1.0"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
indicatif = "0.17"
tempfile = "3.10"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
toml = "0.8"
hex = "0.4"
pem = "3.0"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
url = "2.5"
walkdir = "2.5"
glob = "0.3.3"
libc = "0.2"
regex = "1.10"
rand = "0.8"

# Sigstore verification (used directly in commands/ccs/signing.rs)
sigstore = { version = "0.13", default-features = false, features = ["bundle", "rekor", "sigstore-trust-root", "rustls-tls"] }
const-oid = "0.9"
rustls-pki-types = "1.0"
webpki = { package = "rustls-webpki", version = "0.103", features = ["std"], default-features = false }
x509-cert = { version = "0.2", features = ["pem", "std"] }

# Used in commands/ccs/signing.rs for CCS package building
tar = "0.4"
flate2 = "1.0"

# Server dependencies (feature-gated) -- stay here until Phase 2
axum = { version = "0.7", optional = true }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"], optional = true }
tower-http = { version = "0.6", features = ["fs", "cors", "compression-gzip"], optional = true }
tower = { version = "0.5", optional = true }
filetime = { version = "0.2", optional = true }
async-trait = { version = "0.1", optional = true }
futures = { version = "0.3", optional = true }

# Federation (CAS sharing across machines)
dashmap = { version = "6.0", optional = true }
parking_lot = { version = "0.12", optional = true }
mdns-sd = { version = "0.11", optional = true }
flume = { version = "0.11", optional = true }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }

# Object storage (S3-compatible, for Cloudflare R2)
rust-s3 = { version = "0.35", optional = true, default-features = false, features = ["tokio-rustls-tls"] }

# Full-text search engine (embedded)
tantivy = { version = "0.22", optional = true }

# Daemon (feature-gated)
sd-notify = { version = "0.4", optional = true }
axum-extra = { version = "0.9", features = ["typed-header"], optional = true }
hyper = { version = "1.4", features = ["server", "http1"], optional = true }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "service"], optional = true }
http-body-util = { version = "0.1", optional = true }
tokio-stream = { version = "0.1", features = ["sync"], optional = true }
fs2 = "0.4"
nix = { version = "0.29", features = ["user", "mount", "sched", "process", "signal", "resource", "fs"] }

# PolicyKit integration (optional)
zbus = { version = "4.0", optional = true }

[dev-dependencies]

[build-dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_mangen = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Fast release profile - optimized but sccache-friendly (no LTO)
# Use: cargo build --profile fast-release
[profile.fast-release]
inherits = "release"
lto = false
codegen-units = 16
incremental = true

[profile.dev]
# Faster builds in development
incremental = true
