[workspace]
members = [".", "conary-core", "conary-erofs", "conary-server", "conary-test"]
resolver = "3"

[workspace.dependencies]
# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Hashing
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Parallel processing
rayon = "1.8"

# Progress
indicatif = "0.17"

# Temp files
tempfile = "3.10"

# IDs
uuid = { version = "1.0", features = ["v4"] }

# Encoding
base64 = "0.22"
hex = "0.4"
pem = "3.0"

# HTTP
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json"] }
url = "2.5"

# File system
walkdir = "2.5"
glob = "0.3.3"
libc = "0.2"
nix = { version = "0.29", features = ["user", "mount", "sched", "process", "signal", "resource", "fs"] }

# Sigstore
sigstore = { version = "0.13", default-features = false, features = ["bundle", "rekor", "sigstore-trust-root", "rustls-tls"] }
const-oid = "0.9"
rustls-pki-types = "1.0"
webpki = { package = "rustls-webpki", version = "0.103", features = ["std"], default-features = false }
x509-cert = { version = "0.2", features = ["pem", "std"] }

# Archives
tar = "0.4"
flate2 = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"

# Web framework (shared between conary-server and conary-test)
axum = "0.7"
tower = "0.5"
tower-http = "0.6"
tokio-stream = "0.1"

# MCP (shared between conary-server and conary-test)
rmcp = "1.1"
schemars = "1.0"

# Other shared
fs2 = "0.4"
log = "0.4"
regex = "1.10"

[package]
name = "conary"
version = "0.4.0"
edition = "2024"
rust-version = "1.94"
authors = ["Conary Contributors"]
description = "Modern package manager with atomic operations, rollback, and delta updates"
repository = "https://github.com/ConaryLabs/Conary"
license = "MIT OR Apache-2.0"
keywords = ["package-manager", "rpm", "deb", "system"]
categories = ["command-line-utilities"]

[features]
default = []
server = ["dep:conary-server", "conary-core/server"]
polkit = ["conary-server/polkit"]
# Experimental features not ready for production use (AI commands, etc.)
experimental = []

[dependencies]
# Core library
conary-core = { path = "conary-core" }

# EROFS image builder for composefs
conary-erofs = { path = "conary-erofs" }

# CLI
clap = { workspace = true, features = ["cargo"] }
clap_complete = "4.5"

# Logging (needed directly by main.rs and commands/)
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

# Direct imports in commands/
thiserror.workspace = true
rusqlite.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rayon.workspace = true
indicatif.workspace = true
tempfile.workspace = true
uuid.workspace = true
base64.workspace = true
toml.workspace = true
hex.workspace = true
pem.workspace = true
reqwest.workspace = true
url.workspace = true
walkdir.workspace = true
glob.workspace = true
libc.workspace = true

# Sigstore verification (used directly in commands/ccs/signing.rs)
sigstore.workspace = true
const-oid.workspace = true
rustls-pki-types.workspace = true
webpki.workspace = true
x509-cert.workspace = true

# Used in commands/ccs/signing.rs for CCS package building
tar.workspace = true
flate2.workspace = true

# Server crate (feature-gated)
conary-server = { path = "conary-server", optional = true }

# Async runtime (needed by main.rs)
tokio.workspace = true

# Used directly in commands/
nix.workspace = true

[build-dependencies]
clap = { workspace = true, features = ["cargo"] }
clap_mangen = "0.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Fast release profile - optimized but sccache-friendly (no LTO)
# Use: cargo build --profile fast-release
[profile.fast-release]
inherits = "release"
lto = false
codegen-units = 16
incremental = true

[profile.dev]
# Faster builds in development
incremental = true
