[workspace]
members = [
    "apps/conary",
    "apps/remi",
    "apps/conaryd",
    "apps/conary-test",
    "crates/conary-bootstrap",
    "crates/conary-mcp",
    "crates/conary-core",
]
resolver = "3"

[workspace.dependencies]
# Database
rusqlite = { version = "0.39", features = ["bundled"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Hashing
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Parallel processing
rayon = "1.8"

# Progress
indicatif = "0.18"

# Temp files
tempfile = "3.10"

# IDs
uuid = { version = "1.0", features = ["v4"] }

# Encoding
base64 = "0.22"
hex = "0.4"
pem = "3.0"

# HTTP
reqwest = { version = "0.13", features = ["rustls", "webpki-roots", "json"] }
url = "2.5"

# File system
walkdir = "2.5"
glob = "0.3.3"
libc = "0.2"
nix = { version = "0.31", features = ["user", "mount", "sched", "process", "signal", "resource", "fs"] }

# Sigstore
sigstore = { version = "0.13", default-features = false, features = ["bundle", "rekor", "sigstore-trust-root", "rustls-tls"] }
const-oid = { version = "0.10", features = ["db"] }
rustls-pki-types = "1.0"
webpki = { package = "rustls-webpki", version = "0.103", features = ["std"], default-features = false }
x509-cert = { version = "0.2", features = ["pem", "std"] }

# Archives
tar = "0.4"
flate2 = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Crypto
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.9"

# Web framework
axum = "0.8"
tower = "0.5"
tower-http = "0.6"
tokio-stream = "0.1"
mdns-sd = "0.18"

# MCP
rmcp = "1.1"
schemars = "1.0"

# Other shared
fs2 = "0.4"
log = "0.4"
regex = "1.10"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Fast release profile - optimized but sccache-friendly (no LTO)
# Use: cargo build --profile fast-release
[profile.fast-release]
inherits = "release"
lto = false
codegen-units = 16
incremental = true

[profile.dev]
# Faster builds in development
incremental = true
