[package]
name = "conary-core"
version = "0.6.0"
edition = "2024"
rust-version = "1.94"
authors = ["Conary Contributors"]
description = "Core library for the Conary package manager"
license = "MIT OR Apache-2.0"

[features]
default = ["composefs-rs"]
server = ["dep:async-trait", "dep:futures"]
mcp = ["dep:rmcp"]
composefs-rs = ["dep:composefs"]

[dependencies]
# Database
rusqlite.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Hashing for file integrity
sha2.workspace = true
md-5 = "0.10"                    # MD5 for DEB package md5sums (legacy format requirement)
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Logging
tracing.workspace = true

# Package format parsing
rpm = "0.19"

# Temp files for RPM extraction
tempfile.workspace = true

# HTTP client for repository downloads
reqwest.workspace = true

# Serialization for repository metadata and CCS manifests
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
urlencoding = "2"                # URL percent-encoding for API paths
ciborium = "0.2"                 # CBOR encoding for binary CCS manifests

# Date/time handling for repository sync timestamps
chrono.workspace = true

# Delta compression for efficient updates
zstd = "0.13"

# Content-Defined Chunking for efficient dedup and deltas
fastcdc = "3.2"
walkdir.workspace = true                  # Directory traversal for chunk store

# Parallel processing for concurrent downloads
rayon.workspace = true

# SAT-based dependency resolver
resolvo = "0.10"

# Progress bars for downloads
indicatif.workspace = true

# GPG signature verification (pure Rust OpenPGP implementation)
# Note: Using RustCrypto backend with experimental and variable-time flags
# This is acceptable for a package manager use case
sequoia-openpgp = { version = "1.17", default-features = false, features = ["crypto-rust", "allow-experimental-crypto", "allow-variable-time-crypto"] }

# Repository metadata parsing
tar.workspace = true                     # Tarball extraction for Arch repos
flate2.workspace = true                  # Gzip compression (for Arch, Debian, Fedora)
liblzma = "0.4"                  # XZ/LZMA compression (for Arch)
rfc822-like = "0.2"             # RFC 822 parser for Debian/Ubuntu Packages files
quick-xml = "0.37"              # XML parser for Fedora/RPM repodata
ar = "0.9"                      # AR archive parsing for DEB packages
wait-timeout = "0.2"            # Subprocess timeout for scriptlet execution
glob.workspace = true
log.workspace = true                      # Logging facade for transaction module

# Transaction engine dependencies
uuid.workspace = true
fs2.workspace = true                      # File locking for transaction safety
crc32fast = "1.4"                # Fast CRC32 for journal integrity

# Container isolation for scriptlets (Linux namespaces)
nix.workspace = true
libc.workspace = true                    # Low-level syscalls for resource limits

# Ed25519 signatures for CCS package signing
ed25519-dalek.workspace = true
rand.workspace = true                     # Random number generation for key generation
base64.workspace = true                  # Base64 encoding for signatures
hex.workspace = true                      # Hex encoding for chunk hashes

# Regex for scriptlet analysis
regex.workspace = true

# Enum string conversion macros
strum = "0.28"
strum_macros = "0.28"

# Sigstore integration
sigstore.workspace = true
const-oid.workspace = true
pem.workspace = true
rustls-pki-types.workspace = true
webpki.workspace = true
x509-cert.workspace = true

# Async runtime
tokio.workspace = true

# URL parsing for peer endpoints
url.workspace = true

# Diff output
diffy = "0.4.2"

# Binary format parsing
goblin = "0.10.4"

# External command discovery
which = "8.0.0"

# Platform directories
dirs = "6.0.0"

# Capability enforcement (landlock filesystem + seccomp syscall filtering)
landlock = "0.4"
seccompiler = "0.5"

# Server-gated deps (async chunk fetcher)
async-trait = { workspace = true, optional = true }
futures = { workspace = true, optional = true }

# MCP helpers (optional, feature-gated)
rmcp = { workspace = true, features = ["server"], optional = true }

# composefs-rs: EROFS image builder for composefs (optional, feature-gated)
composefs = { version = "0.3", default-features = false, optional = true }

[[bench]]
name = "erofs_build"
harness = false
required-features = ["composefs-rs"]
