[package]
name = "conary-erofs"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "EROFS filesystem image builder for composefs integration"

[dependencies]
crc32c = "0.6"
lz4_flex = "0.11"
lzma-rs = "0.3"
thiserror = "2"
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
