[package]
name = "conary-server"
version = "0.3.0"
edition = "2024"
rust-version = "1.94"
authors = ["Conary Contributors"]
description = "Remi package server and conaryd daemon for Conary"
license = "MIT OR Apache-2.0"

[dependencies]
conary-core = { path = "../conary-core", features = ["server"] }

# Web framework
axum.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7", features = ["io"] }
tower-http = { workspace = true, features = ["fs", "cors", "compression-gzip"] }
tower.workspace = true

# Server utilities
filetime = "0.2"
async-trait.workspace = true
futures.workspace = true
async-stream = "0.3"
dashmap = "6.0"
governor = "0.8"
parking_lot = "0.12"

# Service discovery
mdns-sd = "0.11"
flume = "0.11"

# Object storage
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }

# Full-text search
tantivy = "0.22"

# Daemon dependencies
sd-notify = "0.4"
axum-extra = { version = "0.9", features = ["typed-header"] }
hyper = { version = "1.4", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto", "service"] }
http-body-util = "0.1"
tokio-stream = { workspace = true, features = ["sync"] }

# PolicyKit (optional)
zbus = { version = "4.0", optional = true }

# CLI parsing (for binary entry points)
clap.workspace = true
tracing-subscriber.workspace = true

# MCP (Model Context Protocol)
rmcp = { workspace = true, features = ["server", "macros", "transport-streamable-http-server"] }
schemars.workspace = true

# Shared deps needed directly by server code
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
url.workspace = true

# Deps used directly by moved modules (also in conary-core)
rusqlite.workspace = true
thiserror.workspace = true
sha2.workspace = true
tempfile.workspace = true
reqwest.workspace = true
base64.workspace = true
ed25519-dalek.workspace = true
fs2.workspace = true
nix.workspace = true
libc.workspace = true
log.workspace = true
rand.workspace = true
regex.workspace = true
toml.workspace = true
uuid.workspace = true
walkdir.workspace = true
hex.workspace = true

[features]
default = []
polkit = ["dep:zbus"]

[[bin]]
name = "remi"
path = "src/bin/remi.rs"

[[bin]]
name = "conaryd"
path = "src/bin/conaryd.rs"
