[package]
name = "conary-server"
version = "0.5.0"
edition = "2024"
rust-version = "1.94"
authors = ["Conary Contributors"]
description = "Compatibility shim for remi and conaryd during workspace refactor"
license = "MIT OR Apache-2.0"

[features]
default = []
polkit = ["conaryd/polkit"]

[dependencies]
remi = { path = "../apps/remi" }
conaryd = { path = "../apps/conaryd" }
