[package]
name = "conary-test"
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
description = "Test infrastructure for Conary — declarative TOML test engine with container management, HTTP API, and MCP interface"

[dependencies]
# Workspace shared
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
futures.workspace = true
tar.workspace = true

# Container management
bollard = "0.18"

# HTTP server
axum = "0.7"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"

# MCP
rmcp = { version = "1.1", features = ["server", "macros", "transport-streamable-http-server"] }
schemars = "1.0"

[[bin]]
name = "conary-test"
path = "src/cli.rs"
