[package]
name = "conary-test"
version = "0.8.0"
# Canonical release track: conary-test-v* (legacy history: test-v*)
edition = "2024"
rust-version = "1.94"
authors = ["Conary Contributors"]
license = "MIT OR Apache-2.0"
description = "Test infrastructure for Conary — declarative TOML test engine with container management, HTTP API, and MCP interface"

[dependencies]
conary-core = { path = "../../crates/conary-core" }
conary-mcp = { path = "../../crates/conary-mcp" }

# Workspace shared
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
futures.workspace = true
tar.workspace = true

# SQLite (WAL buffer)
rusqlite.workspace = true

# Concurrency
dashmap.workspace = true

# Async utilities
async-stream.workspace = true

# Container management
bollard = "0.20"
bytes = "1"

# HTTP server + client
axum.workspace = true
reqwest.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["cors"] }
tokio-stream.workspace = true

# MCP
rmcp = { workspace = true, features = ["server", "macros", "transport-streamable-http-server"] }
schemars.workspace = true

[[bin]]
name = "conary-test"
path = "src/cli.rs"
